--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
     display: inline-block;
     padding: 10px 20px;
     margin: 5px 0;
-    background-color: #f0f0f0;
+    background-color: #a7a7a7;
     color: white;
     text-decoration: none;
     border-radius: 5px; /* 添加圆角 */
