--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,19 @@ body {
     font-size: 16px;
     color: #555;
 }
+.top-right-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    background-color: #a7a7a7;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 14px;
+}
+.top-right-button:hover {
+    background-color: #007BFF;
+}
