--- a/styles.css
+++ b/styles.css
@@ -81,19 +81,22 @@ body {
     font-size: 16px;
     color: #555;
 }
-.top-right-button {
+.button-link {
     position: absolute;
     top: 10px;
     right: 10px;
+    display: inline-block;
     padding: 5px 10px;
     background-color: #a7a7a7;
     color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    text-decoration: none; /* 去掉下划线 */
+    border-radius: 5px; /* 添加圆角 */
     transition: background-color 0.3s;
+    cursor: pointer;
     font-size: 14px;
+    text-align: center;
 }
-.top-right-button:hover {
-    background-color: #007BFF;
+
+.button-link:hover {
+    background-color: #007BFF; /* 鼠标悬停时的背景颜色 */
 }
